--- a/appForHolidays/package.json
+++ b/appForHolidays/package.json
@@ -12,11 +12,14 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-dotenv": "^3.3.1",
     "react-native-elements": "^1.2.7",
+    "react-native-gesture-handler": "^1.5.2",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-swipe-gestures": "^1.0.4",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^4.0.10"
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.10.3"
   },
   "devDependencies": {
     "@types/react": "~16.9.0",
