--- a/appForHolidays/tsconfig.json
+++ b/appForHolidays/tsconfig.json
@@ -7,5 +7,8 @@
     "noEmit": true,
     "skipLibCheck": true,
     "resolveJsonModule": true
-  }
+  },
+  "typeRoots": [
+    "./src/types"
+  ],
 }
